Fix white gap

--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ footer img{
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 97.5vh;
     width: 100vw;
     overflow: auto;
     margin-bottom: 0;
